# byteClub_AB05

./: README.md
client/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
client/src/: App.jsx  index.css  main.jsx
client/src/Components/: Articles.jsx  NavBar.jsx  ProfilePage.jsx  StockHistogram.jsx  StockHistoryGraph.jsx  UserChat.jsx  UserChatInputBox.jsx
client/src/Routes/: Login.jsx  Signup.jsx
flagged/: log.csv
server/: pyproject.toml
server/server/: app.py  main.py
