[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.28"
starlette = "^0.37.2"
pydantic = "^2.6.4"
pathlib = "^1.0.1"
transformers="^4.38.2"
torch="^2.2.1"
accelerate="^0.28.0"





[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
