[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ['Vineet', 'Tushar', 'Shriniwas', 'Shivam']
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.28"
starlette = "^0.36.3"
pydantic = "^2.6.4"
pathlib = "^1.0.1"
transformers = "^4.38.2"
torch = "^2.2.1"
accelerate = "^0.28.0"
fastapi = "^0.110.0"
bs4 = "^0.0.2"
prophet = "^1.1.5"
yfinance = "^0.2.37"
plotly = "^5.20.0"
scipy = "^1.12.0"
gradio = "^4.21.0"






[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
